--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -3,12 +3,11 @@
 
 name: Node.js CI
 
-on:
+on:  
   push:
-    branches: [ master ]
   pull_request:
-    branches: [ master ]
-
+    branches:
+      - master
 jobs:
   build:
 
