--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -65,3 +65,12 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm test
+  
+    After-build-ubuntu:
+        needs: build-ubuntu
+        runs-on: ubuntu-latest
+        steps:
+          - name: Runing tests for ubuntu
+            run: echo -----------------------------
+            run: echo Done tests for ubuntu
+
